--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,17 @@ buildscript {
         google()
         jcenter()
         maven { url "file://${localMavenDir.absolutePath}" }
+        maven { url "https://jitpack.io" }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://dl.bintray.com/umsdk/release" }
 //        maven { url "https://github.com/LinXueyuanStdio/MLang/raw/main/dist/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        // 最低支持 java7 的版本
+        classpath "com.github.xiaojinzi123.Component:component-plugin:1.8.3.5-androidx"
         classpath "com.github.breadmoirai:github-release:2.2.12"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -43,7 +47,9 @@ allprojects {
         maven { url "https://jitpack.io" }
 
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://dl.bintray.com/umsdk/release" }
 
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
 //        maven { url "https://github.com/LinXueyuanStdio/MLang/raw/main/dist/" }
     }
 }
@@ -51,3 +57,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply from: "${localGradleDir}/deps.gradle"
