--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,70 +1,15 @@
-apply plugin: 'com.android.application'
-apply plugin: 'com.xiaojinzi.component.plugin'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-
-//region 签名
-def keystorePSW = ''
-def keystoreAlias = ''
-def keystoreAliasPSW = ''
-// default keystore file, PLZ config file path in local.properties
-def keyfile = null
-
-Properties properties = new Properties()
-// local.properties file in the root director
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-def keystoreFilepath = properties.getProperty("keystore.path")
-
-if (keystoreFilepath) {
-    keystorePSW = properties.getProperty("keystore.password")
-    keystoreAlias = properties.getProperty("keystore.alias")
-    keystoreAliasPSW = properties.getProperty("keystore.alias_password")
-    keyfile = file(keystoreFilepath)
-}
-//endregion
+apply from: "${gradle.ext.localGradleDir}/project/fake.gradle"
 
 android {
-    signingConfigs {
-        config {
-            storeFile keyfile
-            storePassword keystorePSW
-            keyAlias keystoreAlias
-            keyPassword keystoreAliasPSW
-            v1SigningEnabled true
-            v2SigningEnabled true
-        }
-    }
-    compileSdkVersion 29
-    buildToolsVersion '29.0.3'
     ndkVersion "21.3.6528147"
-    defaultConfig {
-        applicationId "com.same.ui"
-        minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-        vectorDrawables.generatedDensities = ['mdpi', 'hdpi', 'xhdpi', 'xxhdpi']
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            signingConfig signingConfigs.config
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/rxjava.properties'
+    buildFeatures{
+        dataBinding = true
+        // viewBinding = true
     }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation rootProject.ext.androidx_lib["appcompat"]
     api project(':module-git')
 }
