--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,5 +11,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation rootProject.ext.androidx_lib["appcompat"]
-    api project(':module-git')
+//    api project(':module-git')
 }
