--- a/template/build.gradle
+++ b/template/build.gradle
@@ -1,8 +1,8 @@
-apply from: "${project.rootDir}/gradle/library_header.gradle"
+apply from: "${project.rootDir}/gradle/module_header.gradle"
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     api 'androidx.appcompat:appcompat:1.2.0'
 }
 
-apply from: "${project.rootDir}/gradle/library_tail.gradle"
+apply from: "${project.rootDir}/gradle/module_tail.gradle"
